--- a/backend/package.json
+++ b/backend/package.json
@@ -10,19 +10,21 @@
     "server": "nodemon api/index.js"
   },
   "dependencies": {
-    "axios": "^1.13.2",
-    "bcrypt": "^6.0.0",
-    "body-parser": "^2.2.1",
+    "axios": "^1.7.9",
+    "bcryptjs": "^3.0.0",
+    "body-parser": "^1.20.1",
     "cloudinary": "^2.8.0",
-    "cloudinary-multer": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
-    "multer": "^2.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.11",
-    "stripe": "^20.0.0",
+    "stripe": "^17.4.0",
     "validator": "^13.15.23"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
